--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="icon" href="/asset/Young-Travel.png">
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="icon" href="./asset/Young-Travel.png">
   <title>Young Travel</title>
   <link
       rel="stylesheet"
@@ -19,7 +19,7 @@
           <div class="container">
             <div class="site-logo">
                 <a href="./index.html">
-                  <img src="../asset/Young-Travel.png" alt="">
+                  <img src="./asset/Young-Travel.png" alt="">
                 </a>
             </div>
 
@@ -104,6 +104,6 @@
 
    </main>
 
-<script src="../js/navDropdownList.js"></script>
+<script src="./js/navDropdownList.js"></script>
 </body>
 </html>
