--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </div>
 
             <div class="right-section">
-               <p>How can we help with your travel today？</p>
+               <p class="right-title">How can we help with your travel today？</p>
                <ul class="contactForm">
                       <li>
                         <span>Full Name</span>
