--- a/index.html
+++ b/index.html
@@ -359,16 +359,34 @@
   </div>
 
 </section>
-
-
-
-
- 
-
-   
-
-
    </main>
+
+<footer class="footer">
+   <div class="footer-area">
+
+  <div class="logo-layer">
+    <img src="./asset/Young-Travel.png" alt="">
+    <img src="./asset/Young-Travel.png" alt="">
+
+  </div>
+
+    <div class="footerBar">
+        <a href="#"><span>Home</span></a>
+        <a href="#"><span>Booking</span></a>
+        <a href="#"><span>Travel</span></a> 
+        <a href="#"><span>News</span></a>
+        <a href="#"><span>Contact</span></a>
+    </div>
+
+
+    <div class="abn">
+      <p class="abn1">Young Travel | ABN 39 112 505 236 | Australian Credit Licence 387 443</p>
+      <p class="abn2">Complaints and Suggestions | Privacy Policy
+        2005 – 2023 © Young Travel</p>
+    </div>
+   </div>
+
+</footer>
 
 <script src="./js/navDropdownList.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
