added aboutus page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"/>
  <link rel="stylesheet" href="./css/style.css" />
+ <link rel="stylesheet" href="./css/header.css" />
+ <link rel="stylesheet" href="./css/footer.css" />
 
 </head>
 <body>
@@ -29,8 +31,8 @@
                 <li class="barLinkListItem chosen"><a href="#">Home</a></li>
                 <li class="barLinkListItem"><a href="">Booking</a></li>
                 <li class="barLinkListItem"><a href="">Travel</a></li>
-                <li class="barLinkListItem"><a href="">News</a></li>
-                <li class="barLinkListItem"><a href="">Contact</a></li>
+                <li class="barLinkListItem"><a href="./html/about.html">About</a></li>
+                <li class="barLinkListItem"><a href="./html/contact.html">Contact</a></li>
                 <li class="navDropdownListItem">
                     <a class="navLanguage" href="">English</a>
                     <ul class="navDropdownList">
