added aboutus page

--- a/html/about.html
+++ b/html/about.html
@@ -34,8 +34,8 @@
               <li class="barLinkListItem"><a href="../index.html">Home</a></li>
               <li class="barLinkListItem"><a href="">Booking</a></li>
               <li class="barLinkListItem"><a href="">Travel</a></li>
-              <li class="barLinkListItem chosen"><a href="./contact.html">About</a></li>
-              <li class="barLinkListItem"><a href="">Contact</a></li>
+              <li class="barLinkListItem chosen"><a href="">About</a></li>
+              <li class="barLinkListItem"><a href="./contact.html">Contact</a></li>
               <li class="navDropdownListItem">
                   <a class="navLanguage" href="">English</a>
                   <ul class="navDropdownList">
