added contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -33,7 +33,7 @@
             <ul class="barLinkList">
               <li class="barLinkListItem"><a href="../index.html">Home</a></li>
               <li class="barLinkListItem"><a href="">Booking</a></li>
-              <li class="barLinkListItem"><a href="">Travel</a></li>
+              <li class="barLinkListItem"><a href="./travel.html">Travel</a></li>
               <li class="barLinkListItem"><a href="./about.html">About</a></li>
               <li class="barLinkListItem chosen"><a href="#">Contact</a></li>
               <li class="navDropdownListItem">
