--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <ul class="barLinkList">
                 <li class="barLinkListItem chosen"><a href="#">Home</a></li>
                 <li class="barLinkListItem"><a href="">Booking</a></li>
-                <li class="barLinkListItem"><a href="">Travel</a></li>
+                <li class="barLinkListItem"><a href="./html/travel.html">Travel</a></li>
                 <li class="barLinkListItem"><a href="./html/about.html">About</a></li>
                 <li class="barLinkListItem"><a href="./html/contact.html">Contact</a></li>
                 <li class="navDropdownListItem">
