--- a/html/travel.html
+++ b/html/travel.html
@@ -11,7 +11,7 @@
   crossorigin="anonymous"/>
   <link rel="stylesheet" href="../css/header.css"/>
   <link rel="stylesheet" href="../css/footer.css"/>
-  <link rel="stylesheet" href="../css/about.css"/>
+  <link rel="stylesheet" href="../css/travel.css"/>
   <title>Young Travel</title>
   <script
   src="https://kit.fontawesome.com/dfd0264147.js"
@@ -33,8 +33,8 @@
             <ul class="barLinkList">
               <li class="barLinkListItem"><a href="../index.html">Home</a></li>
               <li class="barLinkListItem"><a href="">Booking</a></li>
-              <li class="barLinkListItem"><a href="./travel.html">Travel</a></li>
-              <li class="barLinkListItem chosen"><a href="">About</a></li>
+              <li class="barLinkListItem chosen"><a href="#">Travel</a></li>
+              <li class="barLinkListItem"><a href="./about.html">About</a></li>
               <li class="barLinkListItem"><a href="./contact.html">Contact</a></li>
               <li class="navDropdownListItem">
                   <a class="navLanguage" href="">English</a>
@@ -52,10 +52,11 @@
 </section>
 
 <main>
-  <figure class="image-section pictureLink">
+  <figure class="background-section backgroundLink">
      <div class="image-container">
         <h2>with Young travel</h2>
         <h2>Plan your trip with the<span> expertise </span></h2>
+        <h2>Plan your trip <span>with</span> the expertise</h2>
      </div>
 
   </figure>
@@ -70,11 +71,7 @@
   </section>
 
 
-  <section class="employee-list">
-    
-  </section>
 
-    <button class="showMore">Show More</button>
 
   <section class="contactForm">
 
@@ -196,7 +193,5 @@
 </footer>
 
 <script src="../js/navDropdownList.js"></script>
-<script src="../js/employeeList.js"></script>
-<!-- <script src="../js/showMore.js"></script> -->
 </body>
 </html>
