--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <nav class="barLink">
               <ul class="barLinkList">
                 <li class="barLinkListItem chosen"><a href="#">Home</a></li>
-                <li class="barLinkListItem"><a href="">Booking</a></li>
-                <li class="barLinkListItem"><a href="./html/travel.html">Travel</a></li>
+                <li class="barLinkListItem"><a href="./html/service.html">Services</a></li>
+                <li class="barLinkListItem"><a href="./html/travel.html">News</a></li>
                 <li class="barLinkListItem"><a href="./html/about.html">About</a></li>
                 <li class="barLinkListItem"><a href="./html/contact.html">Contact</a></li>
                 <li class="navDropdownListItem">
-                    <a class="navLanguage" href="">English</a>
+                    <a class="navLanguage" href=""><img src="../asset/au-flat.png" alt=""> English</a>
                     <ul class="navDropdownList">
                       <li>
                         <a href="#">Chinese</a>
@@ -392,6 +392,7 @@
 
 <script src="./js/navDropdownList.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+<script src="../js/headerOpacity.js"></script>
 </body>
 </html>
 
