--- a/html/travel.html
+++ b/html/travel.html
@@ -24,7 +24,7 @@
     <nav class="navbar fixed">
         <div class="container">
           <div class="site-logo">
-              <a href="./index.html">
+              <a href="../index.html">
                 <img src="../asset/Young-Travel.png" alt="">
               </a>
           </div>
@@ -32,12 +32,12 @@
           <nav class="barLink">
             <ul class="barLinkList">
               <li class="barLinkListItem"><a href="../index.html">Home</a></li>
-              <li class="barLinkListItem"><a href="">Booking</a></li>
-              <li class="barLinkListItem chosen"><a href="#">Travel</a></li>
+              <li class="barLinkListItem"><a href="./service.html">Services</a></li>
+              <li class="barLinkListItem chosen"><a href="#">News</a></li>
               <li class="barLinkListItem"><a href="./about.html">About</a></li>
-              <li class="barLinkListItem"><a href="./contact.html">Contact</a></li>
+              <li class="barLinkListItem"><a href="./contact.html"> Contact</a></li>
               <li class="navDropdownListItem">
-                  <a class="navLanguage" href="">English</a>
+                  <a class="navLanguage" href=""><img src="../asset/au-flat.png" alt=""> English</a>
                   <ul class="navDropdownList">
                     <li>
                       <a href="#">Chinese</a>
@@ -293,5 +293,6 @@
 </footer>
 
 <script src="../js/navDropdownList.js"></script>
+<script src="../js/headerOpacity.js"></script>
 </body>
 </html>
