start add responsive

--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../css/header.css"/>
   <link rel="stylesheet" href="../css/footer.css"/>
   <link rel="stylesheet" href="../css/about.css"/>
+  <link rel="stylesheet" href="../css/contactForm.css" />
   <title>Young Travel</title>
   <script
   src="https://kit.fontawesome.com/dfd0264147.js"
@@ -37,7 +38,7 @@
               <li class="barLinkListItem chosen"><a href="">About</a></li>
               <li class="barLinkListItem"><a href="./contact.html">Contact</a></li>
               <li class="navDropdownListItem">
-                  <a class="navLanguage" href=""> <img src="../asset/au-flat.png" alt=""> English</a>
+                  <a class="navLanguage" href=""> <img src="../asset/au-flat.png" alt=""></a>
                   <ul class="navDropdownList">
                     <li>
                       <a href="#">Chinese</a>
