--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
  <link rel="stylesheet" href="./css/style.css" />
  <link rel="stylesheet" href="./css/header.css" />
  <link rel="stylesheet" href="./css/footer.css" />
+ <link rel="stylesheet" href="./css/contactForm.css" />
 
 </head>
 <body>
@@ -34,7 +35,9 @@
                 <li class="barLinkListItem"><a href="./html/about.html">About</a></li>
                 <li class="barLinkListItem"><a href="./html/contact.html">Contact</a></li>
                 <li class="navDropdownListItem">
-                    <a class="navLanguage" href=""><img src="../asset/au-flat.png" alt=""> English</a>
+                  <!-- <li class="barLinkListItem"> -->
+                    <a class="navLanguage" href=""><img src="./asset/au-flat.png" alt=""></a>
+                    <!-- <a href=""><img src="../asset/au-flat.png" alt=""></a> -->
                     <ul class="navDropdownList">
                       <li>
                         <a href="#">Chinese</a>
@@ -47,6 +50,8 @@
         </div>
       </nav>
 </section>
+
+
 
    <main class="mainPage">
     <section >
